--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,18 +3,42 @@
 }
 
 body {
+  height: 100%;
+  padding: 50px;
   font-family: system-ui, sans-serif;
+  display: flex;
+  justify-content: center;
+}
+
+input {
+  all: unset;
+  color: white;
+  background-color: rgb(37, 117, 170);
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
 }
 
 .form {
+  z-index: 3;
+  position: relative;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: rgb(255 255 255 / 56%);
   display: flex;
   flex-direction: column;
   gap: 15px;
-  width: 300px;
+  width: 40%;
+  height: 50%;
 }
 
 .input {
   font: inherit;
+}
+
+.check-box {
+  display: flex;
+  display: inline-block;
 }
 
 .input:not([type="checkbox"]) {
@@ -22,10 +46,27 @@ body {
 }
 
 .label {
-  display: inline-block;
-  width: 100px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .input[type="checkbox"] + .label {
   width: auto;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.submit-button {
+  width: 100px;
+}
+
+.image {
+  position: absolute;
+  top: 0;
+  max-height: 100vh;
+  object-fit: cover;
 }
